force-app/mainPackage/default/objects/Test_Drive__c/fields/Battery__c.field-meta.xml
<CustomField>
    <fullName>Battery__c</fullName>
    <label>Battery</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>55 KWh</fullName>
            </value>
            <value>
                <fullName>60 KWh</fullName>
            </value>
            <value>
                <fullName>65 KWh</fullName>
            </value>
            <value>
                <fullName>70 KWh</fullName>
            </value>
            <value>
                <fullName>80 KWh</fullName>
            </value>
            <value>
                <fullName>85 KWh</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>