force-app/mainPackage/default/objects/Test_Drive__c/fields/Color__c.field-meta.xml
<CustomField>
    <fullName>Color__c</fullName>
    <label>Color</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>White</fullName>
            </value>
            <value>
                <fullName>Black</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Purple</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>