force-app/mainPackage/default/objects/Test_Drive__c/fields/Dealer__c.field-meta.xml
<CustomField>
    <fullName>Dealer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Test Drives (Contact)</relationshipLabel>
    <relationshipName>Test_Drives1</relationshipName>
    <type>Lookup</type>
</CustomField>