force-app/mainPackage/default/objects/Test_Drive__c/fields/Options__c.field-meta.xml
<CustomField>
    <fullName>Options__c</fullName>
    <label>Options</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard Package</fullName>
            </value>
            <value>
                <fullName>Performance Package</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>