force-app/mainPackage/default/objects/Test_Drive__c/fields/Seats__c.field-meta.xml
<CustomField>
    <fullName>Seats__c</fullName>
    <label>Seats</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard Seats</fullName>
            </value>
            <value>
                <fullName>Premium Ergo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>